--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 <div style="flex: 1; background-color: #008080; color: white; padding: 2rem; border-radius: 10px;">
   <h2 class="section-title" style="margin-top: 0.5rem;">Helping Students Shine</h2>
   <h3 style="font-weight: 500; margin-top: -0.5rem;">
-    Offering 1:1 and small group tutoring sessions for over 6 years
+    Offering 1:1 and small group tutoring sessions
   </h3>
 
 <div style="display: flex; align-items: center; gap: 2rem; flex-wrap: wrap; margin-bottom: 2rem;">
