--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
   </div>
 
   <p style="margin-top: 1.5rem;">
-    Let me take the pressure off parents and give you peace of mind.
+   Take the pressure off and get peace of mind! 
   </p>
 </div>
   </section> <!-- END tutoring section -->
