--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Tutoring & Grant Services</title>
+<meta name="google-site-verification" content="GXUVxpPs0aRchm0-0C1KQ06RWJ2YvTtd7Z5G0CQwtgw" />
+  <title>Tutoring & Other Services</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     /* Base Reset & Typography */
