--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="google-site-verification" content="GXUVxpPs0aRchm0-0C1KQ06RWJ2YvTtd7Z5G0CQwtgw" />
-  <title>Tutoring & Other Services</title>
+  <title>Kidd Tutors | Expert Online Tutoring & Grant Writing Support</title>
+<meta name="description" content="1:1 and small group tutoring, exam prep, confidence-building learning, and grant writing support for students of all ages.">
+<meta name="keywords" content="tutoring, exam prep, GCSE, A-Level, IB, homeschooling, online lessons, grant writing, education">
+<meta name="author" content="Kidd Tutors">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600&display=swap" rel="stylesheet"/>
   <style>
     /* Base Reset & Typography */
